syntax = "proto3";
package com.wiseasy.ecr.hub.sdk.protobuf;
option java_package = "com.wiseasy.ecr.hub.sdk.protobuf";
option java_outer_classname = "ECRHubResponseProto";
message ECRHubResponse {
  /**
  topic ：ecrhub.init：init（Handshake）；ecrhub.pay.order：payment；ecrhub.pay.query：query；ecrhub.pay.close：close order；ecrhub.heartbeat：heart beat
   */
  string topic = 1;
  /**
  Request ID, used to track the sending and returning of orders
  */
  string request_id = 2;
  /**
  AppID of payment application
  */
  string  app_id = 3;
  /**
  status
 */
  bool success = 4;
  /**
  error message
  */
  string error_msg = 5;
  /**
  Response Business Data
  */
  ResponseBizData biz_data = 6;
  /**
   Response device data
  */
  ResponseDeviceData device_data = 7;
}

message ResponseDeviceData {
  /**
  mac address
   */
  string mac_address = 1;
  /**
  server name
   */
  string app_name = 2;
  /**
  device sn
   */
  string device_sn = 3;
  /**
  app version name
  */
  string app_version = 4;
}

message ResponseBizData {
  /**
  Merchant order number
  */
  string merchant_order_no = 1;
  /**
   order amount
  */
  string order_amount = 2;
  /**
  trans amount
  */
  string trans_no = 3;
  /**
  price currency
  */
  string price_currency = 4;
  /**
  trans type
  */
  string trans_type = 5;
  /**
  pay scenario
  */
  string pay_scenario = 6;
  /**
  trans status
  */
  string trans_status = 7;
  /**
  pay channel trans_no
  */
  string pay_channel_trans_no = 8;
  /**
  trans end time
  */
  string trans_end_time = 9;
  /**
  pay method id
  */
  string pay_method_id = 10;
  /**
  merchant discount
  */
  string discount_bmopc = 11;
  /**
   pay channel discount
  */
  string discount_bpc = 12;
  /**
 extends params
 */
  map<string, string> extends_params = 13;
  /**
  Additional information
   */
  string attach = 14;
  /**
 Cashback amount
 */
  string cashback_amount = 15;
  /**
  tip amount
  */
  string tip_amount = 16;
}

